[metadata]
name = datacollector
version = 0.1.0
author = Patryk Malcher
author_email = pm.patrykmalcher@gmail.com
description = A bus data collector
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/patrykmalcher/buses-in-warsaw/
license = MIT

[options]
packages = find:

[options.packages.find]
where = src/main